582316: Use Java 17 for builds
Avoid DTFJ error with Java 17

Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=582316
Change-Id: Ic58f155de1da5a299bd44bb3196cd3e42ecfe4c4